# sic4gridcells

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: ablations.yaml  medium.yaml  paper_suite.yaml  paper_suite_smoke.yaml  sic_paper.yaml  smoke.yaml
docs/: runbook.md  sic-implementation-plan.md  sic-reproduction-plan.md
scripts/: build_paper_figures.py  eval_checkpoint.py  profile_train.py  run_ablations.py  run_paper_suite.py  train_sic.py  validate_eval.py
src/sic4gridcells/: __init__.py  analysis.py  analysis_ext.py  config.py  data.py  evaluate.py  figure_data.py  logging_utils.py  losses.py  model.py  paper_figures.py  paper_suite.py  plotting.py  profiling.py  runtime.py  train.py  validation.py
tests/: test_analysis.py  test_analysis_ext.py  test_config.py  test_data.py  test_evaluate.py  test_losses.py  test_model.py  test_paper_figures.py  test_paper_suite.py  test_profiling.py  test_run_ablations.py  test_train_step.py  test_validation.py
